Fix font weight on navigation and add some extra margins in the post's images

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -60,6 +60,7 @@ header {
 
     nav a {
         margin-left: 20px;
+        font-weight: 500;
     }
 }
 
@@ -145,5 +146,10 @@ div.circle {
 div.post {
     h3 {
         margin-top: 80px;
+    }
+
+    img {
+        margin-top: 32px;
+        margin-bottom: 32px;
     }
 }
